--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "dev": "partykit dev",
     "deploy": "partykit deploy",
     "test": "vitest",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint src --ext .ts"
   },
-  "keywords": ["ludo", "multiplayer", "partykit"],
+  "keywords": [
+    "ludo",
+    "multiplayer",
+    "partykit"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -17,6 +22,10 @@
   },
   "devDependencies": {
     "typescript": "^5.3.3",
-    "vitest": "^1.2.1"
+    "vitest": "^1.2.1",
+    "eslint": "^8.56.0",
+    "@typescript-eslint/parser": "^6.18.1",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "prettier": "^3.1.1"
   }
 }
